<resources>
    <string name="app_name">IndianRailwaysEnquiry</string>
    <string name="pnrHint">Enter the PNR Number</string>
    <string name="pnrShow">PNR Details</string>
    <string name="pnrHeading">PNR Details</string>
    <string name="bookingStatus">Booking Status:</string>
    <string name="currentStatus">Current Status:</string>
    <string name="getStatus">Get Status</string>
    <string name="trainSchedule">Train Schedule</string>
    <string name="trainSearch">Enter train name or number</string>
    <string name="gettrainNameNo">Get Schedule</string>
    <string name="emptyView">No data to display.</string>
    <string name="changeFareActivity">Get Fare for this train</string>
    <string name="stationCodeHeading">Station Code</string>
    <string name="stationCodeHint">Enter the Station Name</string>
    <string name="getStationCode">Get Station Codes</string>
    <string name="copy">Copy</string>
    <string name="fareActivity">Get Fare</string>
    <string name="sourceStation">Station Code of Source</string>
    <string name="destinationStation">Station Code of Destination</string>
    <string name="age">Age</string>
    <string name="classFare">Class</string>
    <string name="quota">Quota</string>
    <string name="getFare">Get Fare</string>
    <string name="trainNumber">Enter the Train Number</string>
    <string name="date">Journey Date</string>
    <string name="fareForOne">Fare for One Person:</string>
    <string name="numberOfPerson">Number of Person(s):</string>
    <string name="totalFare">Total Fare:</string>
    <string name="rsSymbol">\u20B9</string>
    <string name="arrowSymbol">-></string>
    <string name="km">Kms</string>
    <string name="hlt_mins">min(s)</string>
    <string name="day_show">day(s)</string>
    <string name="daysOfRunning">Days of Running: </string>
</resources>
