<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pronoymukherjee.indianrailwaysenquiry.activity.TrainFareActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fareActivity"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="27sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sourceStation"
                android:id="@+id/sourceStation"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/destinationStation"
                android:id="@+id/destinationStation"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/classFare"
                android:spinnerMode="dropdown"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quotaFare"
                android:spinnerMode="dropdown"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ageFare"
                android:inputType="number"
                android:layout_weight="1"
                android:hint="@string/age"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:id="@+id/trainNumberFare"
                android:hint="@string/trainNumber"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:inputType="none"
                android:clickable="true"
                android:focusable="false"
                android:id="@+id/date"
                android:hint="@string/date"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fareForOne"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/rsSymbol"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                tools:text="198"
                android:id="@+id/fareOne"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfPerson"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:id="@+id/numberofPerson"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:inputType="number"
                android:textColor="@color/black"
                tools:text="5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/totalFare"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/rsSymbol"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.55"
                android:id="@+id/totalFare"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="568"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp" />
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarFare"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_shape"
                android:text="@string/getFare"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:id="@+id/getFare"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
