<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pronoymukherjee.indianrailwaysenquiry.activity.StationNameToCode">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stationCodeHeading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="27sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/stationCodeList"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progessBarStationCode"
            style="@style/Base.Widget.AppCompat.ProgressBar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/stationName"
            android:hint="@string/stationCodeHint"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emptyViewStationCode"
            android:text="@string/emptyView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="2">
        <Button
            android:id="@+id/getStationCode"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_shape"
            android:layout_gravity="center"
            android:text="@string/getStationCode"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
