<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pronoymukherjee.indianrailwaysenquiry.activity.TrainScheduleActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/trainName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="Train Name" />

        <TextView
            android:id="@+id/trainNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="Train Number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2.2"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <TextView
            android:id="@+id/trainDaysShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/daysOfRunning" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trainDays"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.0"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/trainSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="Source Station" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:text="@string/arrowSymbol"
            android:id="@+id/arrow"
            android:textStyle="bold"
            android:textSize="27sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/trainDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="DestinationStation" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="vertical">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/routeList"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center"
            android:id="@+id/progessBar"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emptyView"
            android:textAlignment="center"
            android:visibility="gone"
            android:id="@+id/emptyView"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/trainNumberInput"
            android:hint="@string/trainSearch"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center">
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/getStatus"
            android:text="@string/getStatus"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/custom_shape"/>
    </LinearLayout>
</LinearLayout>
